# NetSquid-SnippetTemplate

./: .flake8  .gitignore  CHANGELOG.md  HOWTO-SnippetTemplate.md  INSTALL.md  LICENSE  Makefile  README.md  cookiecutter.json  make.sh  requirements.txt  setup.cfg  setup.py
hooks/: post_gen_project.py  pre_gen_project.py
licenses/: GNU_LICENSE
netsquid_mypkg/: test_samplemodule.py
netsquid_mysnippet/: samplemodule.py  test_samplemodule.py
{{cookiecutter.project_name}}/: .bumpversion.cfg  .flake8  .gitlab-ci.yml  CHANGELOG.md  INSTALL.md  Makefile  README.md  requirements.txt  setup.cfg
{{cookiecutter.project_name}}/.licenses/: BSD_LICENSE  MIT_LICENSE
{{cookiecutter.project_name}}/docs/: Makefile  conf.py  installation.rst  usage.rst
{{cookiecutter.project_name}}/docs/modules/: samplemodule.rst
{{cookiecutter.project_name}}/examples/: example_samplemodule.py  run_examples.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  CHANGELOG.md  INSTALL.md  Makefile  README.md  requirements.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.licenses/: APACHE_LICENSE  GNU_LICENSE
{{cookiecutter.project_slug}}/docs/: Makefile  README.md  api.rst  index.rst
{{cookiecutter.project_slug}}/tests/: test_samplemodule.py
