# Edit the below configuration parameters to match your snippet

[metadata]
name = netsquid-mysnippet
version = 1.0.0
author = <your name>
author-email = <your email>
description = <short description of snippet>
license = Apache-2.0
home-page = <your website or repository>

[netsquid]
pypi-server = pypi.netsquid.org
