# Edit the below configuration parameters to match your snippet

[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
author = {{ cookiecutter.author_name }}
author-email = {{ cookiecutter.author_email }}
description = {{ cookiecutter.description }}
license = {{ cookiecutter.license }}
home-page = {{ cookiecutter.url }}

[netsquid]
pypi-server = pypi.netsquid.org
